<resources>
    <string name="app_name">ZapperIPTV</string>
    <string name="welcome_message">ZapperIPTV</string>
    <string name="welcome_instruction">Long-press [OK] to add a playlist</string>
    <string name="no_channels_available">No channels available.</string>
    <string name="check_playlist_configuration">Please check your playlist configuration in Settings.</string>
    <string name="settings">Settings</string>
    <string name="add_url_playlist">Add Playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="reload_all">Reload All</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_url">Playlist URL</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="file">FILE</string>
    <string name="delete">Delete</string>
    <string name="playlists">Playlists</string>
    <string name="add_url">Add</string>
    <string name="reload">Reload</string>
    <string name="empty_playlists_message">No playlists added yet.\nSelect \'Add\' to get started.</string>
    <string name="playlist_last_updated">Last updated: %s</string>
    <string name="playlist_never_updated">Never updated</string>
    <string name="playlist_epg_url">EPG URL (optional)</string>
    <string name="epg_indicator">EPG</string>
    <string name="error_invalid_url">Invalid URL</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_channel_failed">This channel couldn\'t be loaded.</string>
    <string name="error_all_channels_failed">All channels failed to play.</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="channel_unknown">Unknown Channel</string>
    <string name="channel_default_name">Channel %d</string>
    <string name="group_other">Other</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="tv_launcher_program_description">Recently Watched</string>
    <string name="tv_launcher_channel_description">Recently Watched Channels</string>
    <string name="all_playlists">All</string>
    <string name="playlist_prev">Previous playlist</string>
    <string name="playlist_next">Next playlist</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_added">Added to Favorites</string>
    <string name="favorite_removed">Removed from Favorites</string>
    <string name="favorites_empty_hint">Press and hold OK on a channel to add it to Favorites</string>
</resources>
